vlib/v/parser/tests/map_init_void2.out
vlib/v/parser/tests/map_init_void2.vv:1:19: error: expecting type declaration
    1 | fn f(m map[string]) {
      |                   ^
    2 |     println('illegal function')
    3 | }
