vlib/v/parser/tests/map_init_void2.vv
fn f(m map[string]) {
	println('illegal function')
}

fn main() {
	println('Hello world')
}
